Ensure loader is always aligned with middle of the screen

--- a/src/client/styles/LoadingSpinner.scss
+++ b/src/client/styles/LoadingSpinner.scss
@@ -1,14 +1,17 @@
+@import '~bulma/sass/utilities/variables';
+
 .loader {
 
-  &.loader-center{
-    margin: 0 auto;
-  }
-
   &.loader-lg {
-    border: 3px solid #dbdbdb;
+    border: 3px solid $grey-lighter;
     border-right-color: transparent;
     border-top-color: transparent;
     height: 4.5rem;
+    left: 50%;
+    margin-left: -2.25rem;
+    margin-top: -5.25rem;
+    position: fixed;
+    top: 50%;
     width: 4.5rem;
   }
 
